@@ -1,3 +1,11 @@
+2019-11-11 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.lex,
+	  src/SDCCval.c,
+	  src/SDCCerr.h,
+	  src/SDCCerr.c:
+	  C2X u8 character constants (N2418).
+
 2019-11-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCClospre.cc,
